Fix rebase issue